# HandSee_server

./: CMakeLists.txt  README.md
include/: imgFeatures.hpp  server.hpp
src/: main.cpp  server.cpp
